--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -26,8 +26,8 @@
     
     sb.GroupChannel.createDistinctChannelIfNotExist(params, function (groupChannel, error) {
         if (error) return;
-        const inviter = groupChannel.channel.members[0]
-        const invitee = groupChannel.channel.members[1]
+        const inviter = groupChannel.channel.inviter
+        const invitee = groupChannel.channel.members[0].userId == inviter.userId ? groupChannel.channel.members[1] : groupChannel.channel.members[0]
         if (groupChannel.isCreated && sb.currentUser.userId == inviter.userId ) {
             sb.currentUser.createMetaData({
                 [invitee.userId]: groupChannel.channel.url
