없는 계정에 연결하려 할 때 버그나서 채팅 안만들어지게

--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -28,7 +28,7 @@
         if (error) return;
         const inviter = groupChannel.channel.inviter
         const invitee = groupChannel.channel.members[0].userId == inviter.userId ? groupChannel.channel.members[1] : groupChannel.channel.members[0]
-        if (groupChannel.isCreated && sb.currentUser.userId == inviter.userId ) {
+        if (groupChannel.isCreated && sb.currentUser.userId == inviter.userId && invitee) {
             sb.currentUser.createMetaData({
                 [invitee.userId]: groupChannel.channel.url
             })
