--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -28,7 +28,11 @@
         if (error) return;
         const inviter = groupChannel.channel.inviter
         const invitee = groupChannel.channel.members[0].userId == inviter.userId ? groupChannel.channel.members[1] : groupChannel.channel.members[0]
-        if (groupChannel.isCreated && sb.currentUser.userId == inviter.userId && invitee) {
+        if(!invitee) {
+            chatroom.innerHTML += "no such user"
+            return
+        }
+        if (groupChannel.isCreated && sb.currentUser.userId == inviter.userId) {
             sb.currentUser.createMetaData({
                 [invitee.userId]: groupChannel.channel.url
             })
