--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -31,6 +31,7 @@
     <script>
         sb.connect("{{ user.username }}", function (user, error) {
             if (error) return;
+            console.log(self)
         });
     </script>
     {% block javascript %}
