--- a/project/board/templates/board/category_board.html
+++ b/project/board/templates/board/category_board.html
@@ -6,9 +6,12 @@
     {{ univ.short_name }} <br>
     {% for category in categories %}
       <a href="{% url 'core:board:category_board' univ.url_name category.name %}">{{ category.name }}</a>
-    {% endfor %}d
+    {% endfor %}
     <br>
     선택된 카테고리: {{ selected_category.name }}
+
+    <a href="{% url 'core:board:category_board' univ.url_name selected_category.name %}">hot</a>
+    <a href="{% url 'core:board:category_board_new' univ.url_name selected_category.name %}">new</a>
 
     <ul>
       {% for post in posts %}x
