--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 
 {% block header %}
     <link rel="stylesheet" href="{% static "board/css/board_header.css" %}" type="text/css">
@@ -54,7 +55,7 @@
                                 <span id="post_{{ post.pk }}">{{ post.total_likes }}</span>
 
                                 <button type="button" class="like" name="{{ post.pk }}" value="Like">
-                                    <img src="{% static "/svg/like.svg" %}"/>
+                                    <img id="like_id_{{ post.pk }}" src="{% static "/svg/like.svg" %}"/>
                                 </button>
                             </div>
 
@@ -94,11 +95,11 @@
                                             </div>
                                         </div>
                                         <div class="post__bottom__time">
-                                            3 days...
+                                            {{ post.created_at|naturaltime }}
                                         </div>
                                         {##}
                                         {##}
-                                        {#                                        {% if user in post.saved.all %}#}
+                                        {#         {% if user in post.saved.all %}#}
                                         {#                                            <input type="button" class="bookmark" name="{{ post.pk }}" value="O">#}
                                         {#                                        {% else %}#}
                                         {#                                            <input type="button" class="bookmark" name="{{ post.pk }}" value="X">#}
@@ -150,6 +151,20 @@
 
     <script>
         $('.like').click(function () {
+            var pk = $(this).attr('name')
+            var like_img = document.getElementById(`like_id_${pk}`);
+            console.log(like_img.classList.contains('clicked'));
+            if (!(like_img.classList.contains('clicked'))) {
+              like_img.src="/static/svg/like-clicked.svg";
+              like_img.setAttribute('class','clicked');
+            } else {
+              like_img.src="/static/svg/like.svg";
+              like_img.removeAttribute('class','clicked');
+            }
+
+
+
+
             const univUrlName = "{{ univ.url_name }}";
             const url = '{% url 'core:board:post_like' 0 %}'.replace('0', univUrlName);
             $.ajax({
