좋아요 버튼 완성

--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -55,7 +55,12 @@
                                 <span id="post_{{ post.pk }}">{{ post.total_likes }}</span>
 
                                 <button type="button" class="like" name="{{ post.pk }}" value="Like">
+                                  {% if user in post.likes.all %}
+                                    <img id="like_id_{{ post.pk }}" class='clicked' src="{% static "/svg/like-clicked.svg" %}"/>
+                                  {% else %}
                                     <img id="like_id_{{ post.pk }}" src="{% static "/svg/like.svg" %}"/>
+                                  {% endif %}
+
                                 </button>
                             </div>
 
