--- a/project/chat/templates/chat/chat.html
+++ b/project/chat/templates/chat/chat.html
@@ -24,10 +24,26 @@
 
     sb.connect("{{ user.username }}", async function (user, error) {
         if (error) return;
+        const chats = await loadChatList(sb)
+        const target = chats.filter(cur => cur.members.filter(cur => cur.userId == "{{partner}}").length)[0]
+        loadLog(target).load(function (messages, error) {
+            if (error) {
+                return;
+            }
+            chatroom.innerHTML = messages.reduce((acc,cur) => {
+                return acc + strfy(cur)
+            },"")
+            chatroom.scrollTop = chatroom.scrollHeight;
+
+        })
+
     });
 
-    m_btn.addEventListener('click', e => {
-        sb.GroupChannel.getChannel(sb.currentUser.metaData['{{ partner }}'], function (groupChannel, error) {
+    m_btn.addEventListener('click', async (e) => {
+        const chats = await loadChatList(sb)
+        const target = chats.filter(cur => cur.members.filter(cur => cur.userId == "{{partner}}").length)[0]
+
+        sb.GroupChannel.getChannel(target.url, function (groupChannel, error) {
             if (error) return;
             groupChannel.sendUserMessage(document.getElementById('message').value, function (message,
                 error) {
