--- a/project/core/static/base/css/base.css
+++ b/project/core/static/base/css/base.css
@@ -9,7 +9,9 @@
 
 body {
     background-color: var(--wrapper-color);
+    font-family: YDIYGO340;
 }
+
 
 @font-face {
     font-family: YDIYGO340;
