--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -7,24 +7,17 @@
     <div class="board__header__search">
         <form action="" method="get">
             <button type="submit" value="search">
-                <object type="image/svg+xml" data="{% static "/svg/search.svg" %}"></object>
+                <img src="{% static "/svg/search.svg" %}">
             </button>
             <input type="text" placeholder="Search mycampus" name="search" value="{{ search }}">
         </form>
     </div>
     <div class="board__header__right">
         <ul class="board__buttons">
-            <li>
-                <object type="image/svg+xml" data="{% static "/svg/alarm.svg" %}"></object>
-            </li>
-            <li>
-                <object type="image/svg+xml" data="{% static "/svg/messege box.svg" %}"></object>
-            </li>
-            <li>
-                <object type="image/svg+xml" data="{% static "/svg/mypage.svg" %}"></object>
-            </li>
-            <li>
-                <object type="image/svg+xml" data="{% static "/svg/post.svg" %}"></object>
+            <li><img src="{% static "/svg/alarm.svg" %}"></li>
+            <li><img src="{% static "/svg/messege box.svg" %}"></li>
+            <li><img src="{% static "/svg/mypage.svg" %}"></li>
+            <li><img id="h__post" src="{% static "/svg/post.svg" %}">
             </li>
         </ul>
     </div>
@@ -39,8 +32,23 @@
 
 {% block contents %}
     <link rel="stylesheet" href="{% static "board/css/main_board.css" %}" type="text/css">
-    <a href="{% url 'core:board:main_board' univ.url_name %}">hot</a>
-    <a href="{% url 'core:board:main_board_new' univ.url_name %}">new</a>
+    <div class="board__pannel__top container">
+      <a href="{% url 'core:board:main_board_new' univ.url_name %}">
+      {% if state == 'new' %}
+        <img src="{% static "/svg/버튼2.svg"%}">
+      {% else %}
+        <img src="{% static "/svg/버튼3.svg"%}">
+      {% endif %}
+      </a>
+      <a href="{% url 'core:board:main_board' univ.url_name %}">
+      {% if state == 'hot' %}
+        <img src="{% static "/svg/버튼4.svg"%}">
+      {% else %}
+        <img src="{% static "/svg/버튼1.svg"%}">
+      {% endif %}
+      </a>
+    </div>
+    
 
     <div class="container board__main">
 
@@ -65,7 +73,6 @@
                             </div>
 
                             <div class="board__post__content">
-
                                 <div class="post__text">
                                     <div class="post__top">
                                         <div class="post__top__category">
@@ -148,7 +155,7 @@
                 <ul class="right__category__list">
                     {% for category in categories %}
                         <li class="{% cycle "c_a" "c_b" "c_c" "c_d" %}">
-                            <a href="{% url 'core:board:category_board' univ.url_name category.name %}">
+                            <a id="category__a" href="{% url 'core:board:category_board' univ.url_name category.name %}">
                                 <span class="c_common">
                                     {{ category.name }}
                                 </span>
