container 조절, mypage 프론트, redirect_with_next util 정의

--- a/project/core/static/base/css/base.css
+++ b/project/core/static/base/css/base.css
@@ -7,6 +7,10 @@
 --border-radius: 0.5rem;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: var(--wrapper-color);
     font-family: YDIYGO340;
