--- a/project/core/static/base/css/container.css
+++ b/project/core/static/base/css/container.css
@@ -4,21 +4,26 @@
   margin: auto auto;
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 530px;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 750px;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 970px;
   }
 }
 
